<?xml version="1.0" encoding="utf-8"?>
<resources>
		
	<string name="app_name">你画我猜</string>
	<string name="btn_back">返    回</string>
	<string name="btn_exit">退    出</string>
	<string name="btn_next">下一步</string>
	<string name="btn_save">保存</string>
	<string name="dialog_tips">提 示</string>
	<string name="btn_yes">确    定</string>
	<string name="btn_cancel">取    消</string>	
    <string name="btn_change_device_name">修改设备名称</string>
    <string name="btn_cancel_discovery">停止搜索设备</string>
	
	<string name="login_hint_nickname">输入您的昵称</string>
	<string name="login_text_selectsex">选择性别</string>
	<string name="login_text_selectavatar">选择头像</string>
	<string name="login_text_male">男</string>
	<string name="login_text_female">女</string>
	<string name="login_text_lastlogin">上次登录: </string>
	<string name="login_text_changeuser">更  换  账  户</string>
	<string name="login_toast_loginfailue">操作失败,请尝试重启程序。</string>
	<string name="login_toast_nickname">请输入您的聊天昵称</string>
	<string name="login_toast_nicknamelong">妈妈说名字不可以取太长</string>
	<string name="login_toast_sex">请选择性别</string>
	
	<string name="connect_wifi">WiFi模式</string>
	<string name="connect_bluetooth">蓝牙模式</string>
	<string name="connect_mode">请选择联机模式</string>
	
	<string name="choose_avatar">请选择头像</string>
	
	<string name="wifiap_btn_connectwifi">连 接</string>
	<string name="wifiap_btn_createap">创建热点</string>
	<string name="wifiap_btn_closeap">关闭热点</string>
	<string name="wifiap_btn_connecting">正在连接 </string>	
	<string name="wifiap_text_wifi_connected">已连接到 </string>
	<string name="wifiap_text_wifi_disconnect">WiFi连接已断开</string>
	<string name="wifiap_text_ap_1">已开启热点</string>
	<string name="wifiap_text_ap_0">热点已关闭</string>
	<string name="wifiap_text_wifi_0">WiFi未开启</string>	
	<string name="wifiap_text_wifi_1_0">WiFi已开启，未连接</string>	
	<string name="wifiap_dialog_createap_nonsupport">您的设备不支持热点创建</string>
	<string name="wifiap_text_createap_creating">正在创建热点&#8230;</string>
	<string name="wifiap_dialog_createap_closewifi_confirm">创建热点会关闭当前的WiFi，确认继续？</string>
	<string name="wifiap_dialog_closeap_confirm">您确定需要关闭热点？</string>
	<string name="wifiap_hint_connectap_pwd">请输入连接密码</string>
	<string name="wifiap_toast_connectap_unavailable">请创建热点或者连接一个热点</string>	
	<string name="wifiap_toast_connectap_error">连接错误，请检查密码后再尝试连接。</string>
	<string name="wifiap_toast_connectap_error_1">连接错误，请尝试重新连接。</string>
	<string name="wifiap_text_createap_succeed">热点创建成功！</string>
	<string name="wifiap_diolog_showpwd">显示密码</string>
	
	
	<string name="lv_refresh_head_load_more">加载更多</string>
    <string name="lv_refresh_end_load_more">更    多</string>
    <string name="lv_refresh_end_click_load_more">点击加载</string>
    <string name="lv_refresh_release_refresh">松开刷新</string>
    <string name="lv_refresh_pull_to_refresh">下拉刷新</string>
    <string name="lv_refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="lv_refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="lv_refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
	
	
	<string name="gameroom_toast_logout">再按一次退出程序</string>
	<string name="gameroom_create">创建房间</string>
	<string name="gameroom_ready">准    备</string>
	<string name="gameroom_order">就    绪</string>
	<string name="gameroom_start">开    始</string>
	<string name="gameroom_sequence">顺序：</string>
	<string name="gameroom_emptyplayer">好像没有找到其他玩家在线喔，刷新试试吧</string>
	<string name="gameroom_haveplayer">当前房间的玩家人数：</string>
	<string name="gameroom_tip">(提示：游戏顺序是根据准备先后确定)</string>
	
	
	<string name="setting_text_profile">个人资料</string>
	<string name="setting_text_myprofile">我的资料</string>
	<string name="setting_text_myprofile_avatar">请选择头像</string>
	<string name="setting_text_sysconfig">系统设置</string>
	<string name="setting_text_sysconfig_sound">声音提醒</string>
	<string name="setting_text_sysconfig_vibra">震动提醒</string>
	<string name="setting_text_sysconfig_aboutus">关于我们</string>	
	<string name="setting_btn_back">返回</string>
	<string name="setting_btn_aboutus">关 于 我 们</string>
	<string name="setting_btn_closeapp">退 出</string>
	<string name="setting_dialog_logout_confirm">确定要退出软件?</string>
	<string name="setting_dialog_logout_ok">确 定</string>
	<string name="setting_dialog_logout_cancel">取 消</string>	
	
	
	<string name="aboutus_copyright">Copyright © 2015 By \nGuoJun,Yujing,Dandan,Renqiu,Jianyan,Zongqiang</string>
	<string name="aboutus_text">腾讯安卓课大作业一枚，喵！</string>
	<string name="aboutus_text2">欢迎各位指正，谢谢\nBy GuoJun,Yujing,Dandan
	    							\nRenqiu,Jianyan,Zongqiang</string>
	

	
    <string name="maintab_text_draw">绘图</string>
	<string name="maintab_text_message">消息</string>
	<string name="maintab_text_result">积分</string>
	<string name="maintab_text_send">发送</string>
	<string name="maintab_text_player">玩家</string>
	<string name="maintab_toast_logout">再按一次退出程序</string>
	<string name="maintab_tip_all">提示所有玩家</string>
	
	<string name="paint_width">宽度</string>
	<string name="paint_alpha">透明度</string>
	<string name="paint_style">样式</string>
	<string name="paint_pencil">铅笔</string>
	<string name="paint_brush">画笔</string>
	<string name="paint_crany">水彩</string>
	<string name="paint_relief">浮雕</string>
	

    <!--  Activity_Bluetooth -->
    <string name="bluetooth_scanning">搜索设备中……</string>
    <string name="bluetooth_select_device">请选择需要连接的设备</string>
    <string name="bluetooth_none_paired">请先匹配一个设备</string>
    <string name="bluetooth_none_found">没有找到设备</string>
    <string name="bluetooth_title_paired_devices">曾配对设备</string>
    <string name="bluetooth_title_other_devices">附近的设备</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to </string>
    <string name="title_not_connected">not connected</string>
    
	
</resources>