<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<LinearLayout
		android:id="@+id/login_linearlayout_main"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="20dp"
		android:layout_weight="1"
		android:orientation="vertical" >


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginTop="15dp"
			android:orientation="horizontal" >

			<EditText
				android:id="@+id/login_et_nickname"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/edittext_default"
				android:hint="@string/login_hint_nickname"
				android:maxLength="8"
				android:singleLine="true" />

		</LinearLayout>


		<View	android:layout_marginTop="20dip"
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:background="@color/devideline" />

		<LinearLayout
		    android:layout_marginTop="15dip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/login_text_selectsex"
				android:textColor="@color/text_color"
				android:textSize="17sp" />

			<RadioGroup
				android:id="@+id/login_baseinfo_rg_gender"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_gravity="right"
				android:layout_weight="1"
				android:gravity="right|center"
				android:orientation="horizontal" >

				<RadioButton
					android:id="@+id/login_baseinfo_rb_male"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="3.0dip"
					android:text="@string/login_text_male"
					android:textColor="@color/text_color"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/login_baseinfo_rb_female"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/login_text_female"
					android:textColor="@color/text_color"
					android:textSize="17sp" />
			</RadioGroup>
		</LinearLayout>
		
		<View	android:layout_marginTop="20dip"
				android:layout_width="match_parent"
				android:layout_height="1dip"
				android:background="@color/devideline" />
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:orientation="horizontal" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center|left"
				
				android:text="@string/login_text_selectavatar"
				android:textColor="@color/text_color"
				android:textSize="17sp" />
			
			<View 
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
			    android:layout_weight="1"/>
			
			<ImageView
			    android:id="@+id/setting_my_avatar_img"
			    android:layout_width="100dp"
			    android:layout_height="100dp"
				android:gravity="center|right"
			    android:adjustViewBounds="true"
			    android:background="@drawable/corners_avatar"
			    android:contentDescription="@string/app_name"
			    android:padding="6dp" />
			
		</LinearLayout>
	</LinearLayout>


	<LinearLayout
		android:id="@+id/login_linearlayout_existmain"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:visibility="gone" >

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical" >

			<ImageView
				android:id="@+id/login_img_existImg"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginRight="10dp"
				android:adjustViewBounds="true"
				android:background="@drawable/corners_avatar"
				android:contentDescription="@string/app_name"
				android:maxHeight="80dp"
				android:maxWidth="80dp"
				android:padding="6dp" />

			<TextView
				android:id="@+id/login_tv_existName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_above="@+id/login_layout_Lastlogintime"
				android:layout_toRightOf="@id/login_img_existImg"
				android:textSize="25sp" />



			<LinearLayout
				android:id="@+id/login_layout_gender"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_above="@+id/login_layout_Lastlogintime"
				android:layout_toRightOf="@id/login_tv_existName"
				android:layout_marginBottom="4dip"
				android:layout_marginLeft="5dip"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingTop="6dip"
				android:paddingBottom="6dip"
				android:paddingLeft="6dip"
				android:paddingRight="6dip" >

				<ImageView
					android:id="@+id/login_iv_gender"
					android:layout_width="12dip"
					android:layout_height="12dip"
					android:contentDescription="@string/app_name"
					android:scaleType="fitXY" />

			</LinearLayout>


			<LinearLayout
				android:id="@id/login_layout_Lastlogintime"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@id/login_img_existImg"
				android:layout_marginTop="5dp"
				android:layout_toRightOf="@id/login_img_existImg"
				android:orientation="horizontal" >

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/login_text_lastlogin"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/login_tv_lastlogintime"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="18sp" />
			</LinearLayout>

			<Button
				android:id="@+id/login_btn_changeUser"
				android:layout_width="225dp"
				android:layout_height="50dp"
				android:layout_below="@id/login_img_existImg"
				android:layout_marginTop="15dp"
				android:background="@drawable/btn_default"
				android:text="@string/login_text_changeuser"
				android:textColor="#636363"
				android:textSize="20sp" />
		</RelativeLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/bg_unlogin_bar"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingBottom="4dp"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:paddingTop="4dp" >

		<Button
			android:id="@+id/login_btn_exit"
			android:layout_width="wrap_content"
			android:layout_height="42dip"
			android:layout_marginRight="9dip"
			android:layout_weight="1"
			android:background="@drawable/btn_bottombar"
			android:gravity="center"
			android:text="@string/btn_exit"
			android:textColor="@drawable/profile_bottom_text_color"
			style="?android:attr/borderlessButtonStyle"
			android:textSize="14sp" />

		<Button
			android:id="@+id/login_btn_next"
			android:layout_width="wrap_content"
			android:layout_height="42dip"
			android:layout_marginLeft="9dip"
			android:layout_weight="1"
			android:background="@drawable/btn_bottombar"
			android:gravity="center"
			android:text="@string/btn_next"
			android:textColor="@drawable/profile_bottom_text_color"
			style="?android:attr/borderlessButtonStyle"
			android:textSize="14sp" />
	</LinearLayout>

</LinearLayout>